--- a/kidszone/pom.xml
+++ b/kidszone/pom.xml
@@ -27,6 +27,13 @@
     <artifactId>spring-webmvc</artifactId>
     <version>4.3.13.RELEASE</version>
 </dependency>   
+<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
+
   </dependencies>
   <build>
    <plugins>
