--- a/kidszonebackend/pom.xml
+++ b/kidszonebackend/pom.xml
@@ -40,7 +40,11 @@
     <version>1.4.196</version>
     <scope>compile</scope>
 </dependency>
-  
+  <dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>jstl</artifactId>
+    <version>1.2</version>
+</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
